# dscim

./: .gitignore  404.html  CHANGELOG.md  README.md  dscim-env.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: mkdocs.yaml  python-publish.yaml  pythonpackage.yaml
changelog/: index.html
docs/menu/: baseline.md  decorators.md  equity.md  main_recipe.md  risk_aversion.md  simple_storage.md
docs/preprocessing/: input_damages.md  midprocessing.md  preprocessing.md
docs/utils/: functions.md  menu_runs.md  rff.md  utils.md
dscim/: __init__.py  cli.py  descriptors.py
dscim/diagnostics/: batch_maps.py  compare_sccs.py  crayola_plots.py  damage_function.py  damage_inc_share_boxplots.py  discount_rates.py  equity_risk_premiums.py  fair_step.py  global_consumption.py  maps.py  stacked_damage_function.py  var_timeseries.py
dscim/menu/: decorators.py  equity.py  main_recipe.py  risk_aversion.py  simple_storage.py
dscim/preprocessing/: README.md  aggregated_damages_calculation.py  clip_damages.py  combine_CAMEL_coefs.py  generate_configs.py  input_damages.py  midprocessing.py  preprocessing.py  sum_AMEL.py
dscim/preprocessing/climate/: all_masks_rff.py  reformat.py  stack_iterations.py  stack_masks.py
dscim/preprocessing/input_damages/: agriculture_inputs.py  coastal_inputs.py  energy_inputs.py  hybrid_ssp_mortality_inputs.py  labor_inputs.py  mortality_inputs.py  mortality_inputs_archived.py  rechunk_AMEL_indiv_sectors.py  rechunk_AMEL_indiv_sectors_deprecated.ipynb
dscim/preprocessing/inputs/: energy_inputs.py  labor_inputs.py  mortality_inputs.py
dscim/preprocessing/misc/: bottom_code_econ_zarr.py  check_nans.py  convert_float32.py  subset_USA_CEs.py
dscim/preprocessing/rff/: aggregate_rff_weights.py  prep_rff_socioeconomics.py  rff_damage_functions.py  run-rff-emulator.ipynb
dscim/rff_emulator/: aggregate_rff_weights.py  prep_rff_socioeconomics.py  rff_damage_functions.py
dscim/tests/: __init__.py  conftest.py  test_baseline.py  test_equity.py  test_fair_estimations.py  test_risk_aversion.py  test_simple_storage.py
dscim/tests/data/climate/: fair_temps_sims.nc4  gmst.csv  (+1 more)
dscim/utils/: calculate_damages.py  dicts.py  functions.py  generate_yaml.py  menu_runs.py  plotting_utils.py  rff.py  utils.py
menu/baseline/: index.html
menu/decorators/: index.html
menu/equity/: index.html
menu/main_recipe/: index.html
menu/risk_aversion/: index.html
menu/simple_storage/: index.html
preprocessing/input_damages/: index.html
preprocessing/midprocessing/: index.html
preprocessing/preprocessing/: index.html
search/: search_index.json
src/dscim/: __init__.py  _version.py  cli.py  descriptors.py
src/dscim/diagnostics/: batch_maps.py  compare_sccs.py  crayola_plots.py  damage_function.py  damage_inc_share_boxplots.py  discount_rates.py  equity_risk_premiums.py  fair_step.py  global_consumption.py  maps.py  stacked_damage_function.py  var_timeseries.py
src/dscim/menu/: baseline.py  decorators.py  equity.py  main_recipe.py  risk_aversion.py  simple_storage.py
src/dscim/preprocessing/: input_damages.py  midprocessing.py  preprocessing.py
src/dscim/preprocessing/climate/: all_masks_rff.py  (+4 more)
src/dscim/tests/: __init__.py
src/dscim/utils/: dicts.py  functions.py  generate_yaml.py  menu_runs.py  plotting_utils.py  rff.py  utils.py
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_baseline.py  test_equity.py  test_fair_estimations.py  test_fair_utils.py  test_geography.py  test_input_damages.py  test_main_recipe.py  test_preprocessing.py  test_rff.py  test_risk_aversion.py  test_simple_storage.py  test_statsmodels_scipy_compatibility.py
tests/data/: commit_data.py  testing_config.yaml
tests/data/climate/: fair_slr_sims.nc4
tests/data/damages/: test_subset_damages.nc4
utils/functions/: index.html
utils/menu_runs/: index.html
utils/rff/: index.html
utils/utils/: index.html
(+23908 files in other folders)
