[project]
name = "dscim"
description = "Data-Driven Spatial Climate Impact Model core component code"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ClimateImpactLab/dscim"
Documentation = "https://github.com/ClimateImpactLab/dscim"
Source = "https://github.com/ClimateImpactLab/dscim"
"Bug Tracker" = "https://github.com/ClimateImpactLab/dscim/issues"

[build-system]
requires = [
    "setuptools>=62.0",
    "wheel",
    "setuptools_scm>=7.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "999"
