[build-system]
requires = [
    "setuptools>=62.0",
    "wheel",
    "setuptools_scm>=7.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "dscim"
description = "Data-Driven Spatial Climate Impact Model core component code"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "dask",
    "distributed",
    "impactlab-tools",
    "matplotlib",
    "netcdf4",
    "h5netcdf",
    "numpy",
    "pandas",
    "pyarrow",
    "p_tqdm",
    "requests",
    "statsmodels",
    "xarray",
    "zarr",
]

[project.urls]
Homepage = "https://github.com/ClimateImpactLab/dscim"
Documentation = "https://github.com/ClimateImpactLab/dscim"
Source = "https://github.com/ClimateImpactLab/dscim"
"Bug Tracker" = "https://github.com/ClimateImpactLab/dscim/issues"


[tool.setuptools_scm]
fallback_version = "999"

[tool.ruff]
exclude = [
    ".eggs",
    "docs",
]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
ignore = [
    "E402",
    "E501",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # Pyupgrade
    "UP",
]
